@@ -426,8 +426,9 @@ definitions made in the \fI.version\fP file in former \fBmodulecmd\fP releases.
 The parameter \fImodule-file\fP may be either
 .PP
 .RS
-.I a fully qualified modulefile
-with name and version
+.I a fully or partially qualified modulefile
+with \fI name / version\fP.  If name is '.' then the current directory name
+is assumed to be the module name.  (Use this for deep modulefile directories.)
 .RE
 .RS
 .I a symbolic module file name
@@ -441,7 +442,7 @@ with name and version
 .I name
 .I module-file
 .RS
-Assignes the module file \fImodule-file\fP to the alias 
+Assigns the module file \fImodule-file\fP to the alias 
 \fIname\fP. This command should be placed in one of the modulecmd rc files
 in order to provide shorthand invocations of frequently used module file
 names.
