@@ -1,4 +1,4 @@
 #%Module1.0
 ##
-module-version      "modulerc/dir1"	"default"
+module-version      "./dir1"	"default"
 
