@@ -1,4 +1,4 @@
 #%Module1.0
 ##
-module-version      "dir1/1.0"	"default"
+module-version      "./1.0"	"default"
 
