@@ -1,4 +1,4 @@
 #%Module1.0
 ##
-module-version      "1.0/rc1"	"default"
+module-version      "./rc1"	"default"
 
