@@ -6,7 +6,7 @@
 #
 #   File:		loc_rc3/%M%
 #   Revision:		%I%
-#   First Edition:	95/12/06
+#   First Edition:	1995/12/06
 #   Last Mod.:		%U%, %G%
 #
 #   Authors:		Jens Hamisch, Jens.Hamisch@Strawberry.COM
@@ -25,5 +25,5 @@
 
 
 module-version	/1.0	default
-module-version	/2.0	cur stable
+module-version	./2.0	cur stable
 module-version	/3.0	test exp chk new
