@@ -6,7 +6,7 @@
 #
 #   File:		loc_rc4/%M%
 #   Revision:		%I%
-#   First Edition:	95/12/06
+#   First Edition:	1995/12/06
 #   Last Mod.:		%U%, %G%
 #
 #   Authors:		Jens Hamisch, Jens.Hamisch@Strawberry.COM
@@ -24,4 +24,4 @@
 ##############################################################################
 
 
-module-version	/1.0	default
+module-version	./1.0	default
