@@ -26,6 +26,8 @@ modules 3.3.0
 	* Changed the global rc file name to modulerc
 	* Let the path separator "/" be dependent on the system
 	* Added the "notavail" modulefile (as shown in man page)
+	* Let the "module-version" command use a "name" of '.' for "this"
+	  module directory ... useful for deep modulefile directories.
 
 ****************************   Release 3.2 ******************************
 Modules 3.2.8
